@@ -9,6 +9,7 @@
 * Made rating and reporting links use POST instead of GET and added
   intermediate confirmation page for non-AJAX users
 * You can now edit quotes before approving them
+* Added wildcard searching
 * Made tag cloud ignore unapproved quotes
 * Administrative interface now only displays tabs that are available
 * Made pages point to their own feeds instead of QotW (where applicable)
